Fix list items rendering outside parent element
List item discs were cut off by the side margins when printing.

Increase left padding a bit more to ensure this does not happen.

--- a/src/experience/experience.css
+++ b/src/experience/experience.css
@@ -1,5 +1,5 @@
 .experience ul {
-  @apply list-disc list-outside pl-[1em];
+  @apply list-disc list-outside pl-[1.25em];
 }
 
 .experience ul li {
